# Dancing-Ponies

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml
backend/: .env.example  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_reactions_table.py  d1fc68ca6464_add_photo_file_name_to_wish.py  initial_schema.py
backend/src/: auth.py  config.py  database.py  main.py  models.py
backend/src/routers/: invites.py  reactions.py  todos.py  wishes.py  wishlists.py
backend/src/schemas/: invites.py  reactions.py  todos.py  wishes.py  wishlists.py
backend/tests/: test_wishlists.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  reactions.ts  todos.ts  wishes.ts  wishlists.ts
frontend/src/components/: BackButton.tsx  DropdownMenu.tsx  MembersPanel.tsx  ReactionPicker.tsx  TodoCard.tsx  WishCard.tsx
frontend/src/pages/: InvitePage.tsx  TodoPage.tsx  TodosPage.tsx  WishPage.tsx  WishesPage.tsx  WishlistsPage.tsx
frontend/src/types/: index.ts
