[project]
name = "test-tg-miniapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "httpx2>=2.4.0",
    "loguru>=0.7.3",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.50",
    "telegram-webapp-auth>=3.2.1",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
